--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,6 @@ _ReSharper*/
 *.sdf
 
 #My unwanted folders
-
+*UnityVS.VersionSpecific.dll*
+Holmatro Rescue Experience/Builds/Footage/Holmatro Rescue Experience.mov
+Holmatro Rescue Experience/Footage/Current.mov
